--- a/app/src/main/res/layout/news.xml
+++ b/app/src/main/res/layout/news.xml
@@ -4,20 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    app:layout_constraintVertical_weight="1"
     android:id="@+id/cons1">
 
 
     <ImageView
         android:id="@+id/news_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
-        android:maxWidth="50dp"
-        android:maxHeight="50dp"
+        app:layout_constraintHeight_percent="0.6"
+        app:layout_constraintVertical_weight="1"
+        android:maxWidth="30dp"
+        android:maxHeight="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
